--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@100&family=Source+Sans+Pro:wght@200&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@100&family=Source+Sans+Pro:wght@200&display=swap");
 
+body,
 html {
-    /* font-family: 'Open Sans', sans-serif; */
-    font-family: 'Roboto', sans-serif;
-    font-family: 'Source Sans Pro', sans-serif;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
-p {
-    font-family: 'Open Sans', sans-serif;
-}
+/*========================
+    NAV
+=========================*/
