--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,23 @@ html {
   font-family: "Source Sans Pro", sans-serif;
 }
 
+*,
+*:before,
+*:after {
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+}
+
+
 /*========================
     NAV
 =========================*/
-div#navbarSupportedContent {
+.container {
+  text-align: center;
+}
+
+#navbarSupportedContent {
   height: 220px;
   overflow: auto;
   text-align: center;
@@ -23,47 +36,121 @@ div#navbarSupportedContent {
   font-family: "Open Sans", sans-serif;
   font-size: 34px !important;
   text-decoration: none;
-  color: white !important;
+  color: goldenrod !important;
   padding-left: 50px;
-  
 }
 
 nav {
-  background: #817979 !important;
+  background: rgb(63, 44, 63) !important;
   font-size: 18px;
-  color: white !important;
+  color: goldenrod !important;
 }
 
 li {
-  color: white !important;
+  color: goldenrod !important;
   /*padding-left: 10px;*/
   word-spacing: 5px !important;
-} 
-.nav-link {
+}
+.color_animation {
   text-decoration: initial;
-  word-spacing: 0px;
-  margin-right: 0px;
-  margin-left: 0px !important;
+  word-spacing: 5px;
+  margin-right: -30px;
+  margin-left: -30px !important;
   color: white !important;
   -webkit-transition: color 0.3s ease-out;
   -moz-transition: color 0.3s ease-in-out;
   -o-transition: color 0.3s ease-in-out;
   -ms-transition: color 0.3s ease-in-out;
   transition: color 0.3s ease-in-out;
-} 
+}
 
-.nav-link:hover {
+.color_animation:hover {
   color: #9be86f !important;
 }
 
-ul{
-  margin-left:40px;
+ul {
+  margin-left: 40px;
 }
 
+/*========================
+    TITLE
+=========================*/
+.follow_container {
+  width: 100%;
+  position: absolute;
+  top: 35%;
+  text-align: center;
+}
 
-@media (min-Width: 991px){
-  .navbar{
+.top-title {
+  color: goldenrod;
+  font-family: "Playball", cursive;
+  font-size: 120px;
+  font-weight: 400;
+}
+
+.second-title {
+  color: goldenrod;
+  font-weight: lighter;
+  font-size: 30px;
+  font-style: italic;
+  text-transform: capitalize;
+}
+
+#top {
+  background-image: url("../images/restaurantImg.png");
+  margin-top: -21px;
+  padding: 0;
+  min-width: 100%;
+  height: 100%;
+  background-size: cover;
+    text-align: center;
+    background-position: center;
+}
+
+@media (min-width: 660px) {
+  .navbar {
     height: 80px;
   }
+
+  nav {
+    background: rgb(19, 26, 68) !important;
+    font-size: 18px;
+    color: goldenrod !important;
+  }
+  #navbarSupportedContent {
+    height: 320px;
+    overflow: auto;
+    text-align: center;
+    text-decoration: none !important;
+  }
+  
+}
+@media (max-width: 660px) {
+  nav {
+    background: rgb(48, 63, 44) !important;
+    font-size: 18px;
+    color: goldenrod !important;
+  }
+  #navbarSupportedContent {
+    height: 110px;
+    overflow: auto;
+    text-align: center;
+    text-decoration: none !important;
+  }
+ 
 }
 
+@media (max-width: 1200px) {
+  .navbar-brand {
+    padding: 20px;
+  }
+  .color_animation {
+    margin: -15px;
+  }
+  nav {
+    background: rgb(63, 45, 63) !important;
+    font-size: 18px;
+    color: goldenrod !important;
+  }
+}
