--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,13 @@ html {
   font-family: "Source Sans Pro", sans-serif;
 }
 
-*,
+/* *,
 *:before,
 *:after {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
-}
+} */
 
 
 /*========================
@@ -24,6 +24,7 @@ html {
 =========================*/
 .container {
   text-align: center;
+  
 }
 
 #navbarSupportedContent {
@@ -31,6 +32,7 @@ html {
   overflow: auto;
   text-align: center;
   text-decoration: none !important;
+  padding-left: 200px;
 }
 .navbar-brand {
   font-family: "Open Sans", sans-serif;
@@ -38,6 +40,7 @@ html {
   text-decoration: none;
   color: goldenrod !important;
   padding-left: 50px;
+  
 }
 
 nav {
@@ -48,15 +51,15 @@ nav {
 
 li {
   color: goldenrod !important;
-  /*padding-left: 10px;*/
+  /* padding-left: 10px; */
   word-spacing: 5px !important;
 }
 .color_animation {
   text-decoration: initial;
   word-spacing: 5px;
-  margin-right: -30px;
-  margin-left: -30px !important;
-  color: white !important;
+  margin-right: 10px;
+  margin-left: 10px !important;
+  color:goldenrod !important;
   -webkit-transition: color 0.3s ease-out;
   -moz-transition: color 0.3s ease-in-out;
   -o-transition: color 0.3s ease-in-out;
@@ -65,12 +68,16 @@ li {
 }
 
 .color_animation:hover {
-  color: #9be86f !important;
+  color: brown !important;
 }
 
 ul {
   margin-left: 40px;
 }
+
+
+
+
 
 /*========================
     TITLE
@@ -113,13 +120,8 @@ ul {
     height: 80px;
   }
 
-  nav {
-    background: rgb(19, 26, 68) !important;
-    font-size: 18px;
-    color: goldenrod !important;
-  }
   #navbarSupportedContent {
-    height: 320px;
+    height: 65px;
     overflow: auto;
     text-align: center;
     text-decoration: none !important;
@@ -127,30 +129,31 @@ ul {
   
 }
 @media (max-width: 660px) {
-  nav {
-    background: rgb(48, 63, 44) !important;
-    font-size: 18px;
-    color: goldenrod !important;
-  }
+ 
   #navbarSupportedContent {
-    height: 110px;
+    height: 135px;
     overflow: auto;
     text-align: center;
+    padding-left: 0px;
     text-decoration: none !important;
   }
  
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 992px) {
   .navbar-brand {
     padding: 20px;
   }
   .color_animation {
-    margin: -15px;
+    margin: 15px;
   }
-  nav {
-    background: rgb(63, 45, 63) !important;
-    font-size: 18px;
-    color: goldenrod !important;
+
+  #navbarSupportedContent {
+    height: 145px;
+    overflow: auto;
+    text-align: center;
+    padding-left: 0px;
+    background-color: rgb(63, 45, 63);
+    text-decoration: none !important;
   }
 }
