--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,11 @@ html {
     -webkit-font-smoothing: antialiased;
 } */
 
-
 /*========================
     NAV
 =========================*/
 .container {
   text-align: center;
-  
 }
 
 #navbarSupportedContent {
@@ -40,7 +38,6 @@ html {
   text-decoration: none;
   color: goldenrod !important;
   padding-left: 50px;
-  
 }
 
 nav {
@@ -59,7 +56,7 @@ li {
   word-spacing: 5px;
   margin-right: 10px;
   margin-left: 10px !important;
-  color:goldenrod !important;
+  color: goldenrod !important;
   -webkit-transition: color 0.3s ease-out;
   -moz-transition: color 0.3s ease-in-out;
   -o-transition: color 0.3s ease-in-out;
@@ -75,13 +72,20 @@ ul {
   margin-left: 40px;
 }
 
-
-
-
-
 /*========================
     TITLE
 =========================*/
+#top {
+  background-image: url("../images/restaurantImg.png");
+  margin-top: -21px;
+  padding: 0;
+  min-width: 100%;
+  height: 100%;
+  background-size: cover;
+  text-align: center;
+  background-position: center;
+}
+
 .follow_container {
   width: 100%;
   position: absolute;
@@ -104,15 +108,30 @@ ul {
   text-transform: capitalize;
 }
 
-#top {
-  background-image: url("../images/restaurantImg.png");
-  margin-top: -21px;
-  padding: 0;
-  min-width: 100%;
-  height: 100%;
-  background-size: cover;
+
+
+@media (max-width: 660px) {
+
+  body {
+    width: 194%;
+    height: 100%;
+  }
+  
+  .follow_container {
+    width: 100%;
+    position: relative;
+    top: 35%;
     text-align: center;
-    background-position: center;
+  }
+  
+  #navbarSupportedContent {
+    height: 135px;
+    overflow: auto;
+    text-align: center;
+    padding-left: 0px;
+    text-decoration: none !important;
+  }
+
 }
 
 @media (min-width: 660px) {
@@ -126,18 +145,7 @@ ul {
     text-align: center;
     text-decoration: none !important;
   }
-  
-}
-@media (max-width: 660px) {
- 
-  #navbarSupportedContent {
-    height: 135px;
-    overflow: auto;
-    text-align: center;
-    padding-left: 0px;
-    text-decoration: none !important;
-  }
- 
+
 }
 
 @media (max-width: 992px) {
