--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 body,
 html {
+  width: 100%;
   margin: 0;
   padding: 0;
   height: 100%;
@@ -18,7 +19,10 @@ html {
     -webkit-font-smoothing: antialiased;
 }
 
-
+.carousel-slide {
+  float: right !important;
+  margin-right: -15px;
+}
 /*========================
     NAV
 =========================*/
@@ -45,6 +49,7 @@ nav {
   background: rgb(63, 44, 63) !important;
   font-size: 18px;
   color: goldenrod !important;
+  
 }
 
 li {
@@ -69,9 +74,11 @@ li {
   color: brown !important;
 }
 
-ul {
+.navbar-nav{
   margin-left: 40px;
 }
+
+
 
 /*========================
     TITLE
@@ -144,13 +151,279 @@ p.desc-text {
   margin-top: 5px;
 }
 
-@media (max-width: 660px) {
+/*========================
+    MENU
+=========================*/
+.background_content h1 {
+  font-size: 3em;
+  width: 60%;
+  position: relative;
+  top: 24%;
+  color: white;
+  padding: 0;
+  border: 0;
+  display: inline-block;
+}
+
+.background_content h1 span {
+  color: white;
+  border-bottom: 8px solid #fff;
+}
+
+.pricing.background_content {
+  background: url("../images/pricing.jpg") no-repeat center center;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.description_content {
+  padding: 50px 0;
+  width: 100%;
+  background: #fff;
+  margin: 0 auto 0 auto;
+  z-index: 99;
+  position: relative;
+  background: white;
+  text-align: center;
+}
+
+/** page structure **/
+#w {
+  display: block;
+  max-width: 1100px;
+  min-width: 280px;
+  /*padding-top: 20px;*/
+  margin: 0 auto;
+}
+
+
+/** filters list **/
+#filter-list {
+	display: block;
+	width: 100%;
+	text-align: center;
+  margin-bottom: 25px;
+  padding: 0px;
+}
+
+#filter-list li {
+	font-weight: bold;
+	color:black !important;
+  display: inline-block;
+  width: auto;
+  padding: 6px 10px;
+	margin-right: 15px;
+	font-size: 1.2em;
+	cursor: pointer;
+	/*-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;*/
+	/*border-radius: 3px;*/
+	border-bottom: 1px solid rgba(255, 255, 255, 0);
+}
+#filter-list li:hover {
+	color: rgb(129, 24, 24) !important;
+}
+#filter-list li.active {
+	font-weight: bold;
+	/*background: #D4CECC;*/
+	border-color: #000;
+}
+
+
+/** portfolio list **/
+#portfolio {
+	display: block;
+  width: 100%;
+  padding: 0 12px;
+  margin-bottom: 0;
+	text-align: center;
+}
+
+#portfolio .item {
+	display: none;
+	opacity: 0;
+	width: 30%;
+	vertical-align: top;
+	margin-bottom: 25px;
+	margin-right: 20px;
+	color: #fff;
+	font-size: 30px;
+	text-align: center;
+	width: 207px;
+	-moz-box-sizing: border-box;
+}
+
+#portfolio .item h2 {
+    font-size: 32px;
+    padding: 10px;
+}
+#portfolio .item1 {
+	display: none;
+	opacity: 0;
+	vertical-align: top;
+	margin-bottom: 25px;
+	margin-right: 20px;
+	color: #fff;
+	font-size: 30px;
+	text-align: center;
+	-moz-box-sizing: border-box;
+}
+
+#portfolio .item a {
+  display: inline-block;
+  max-width: 100%;
+  text-decoration: none;
+  background: #fff;
+
+}
+#portfolio .item img {
+  max-width: 100%;
+}
+
+/*========================
+    DRINKS
+=========================*/
+
+.drinks.background_content {
+  background: url("../images/BAR.jpg") no-repeat center center;
+  background-size:cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+/*========================
+    RESERVATION
+=========================*/
+.right-text p {
+  font-size: 15px;
+  text-align: left !important;
+  border-bottom: 1px solid;
+  padding: 10px 0;
+}
+
+.featured.background_content {
+  background: url("../images/reservation-seat.jpg") no-repeat center center;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+#contact .contact-form {
+  margin: 0 auto;
+  padding: 25px 25px 0px 25px;
+  -moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+  /* -webkit-box-shadow: 0px 1px 4px rgba(0,0,0, 0.2); */
+}
+.inner.contact {
+  padding: 50px 0;
+}
+
+/* Input Styles */
+
+.form {
+  width: 100%;
+  padding: 16.94px;
+  /* background:#E2E2E2; */
+  border: 1px solid rgba(13, 12, 12, 0.23);
+  margin-bottom: 25px;
+  color: #727272 !important;
+  font-size: 13px;
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.form:hover {
+  border: 1px solid #8bc3a3;
+}
+
+.form:focus {
+  color: white;
+  outline: none;
+  border: 1px solid #8bc3a3;
+}
+
+.textarea {
+  height: 200px;
+  max-height: 200px;
+  max-width: 100%;
+}
+
+/* Generic Button Styles */
+.button {
+  padding: 8px 12px;
+  background: #0a5175;
+  display: block;
+  width: 120px;
+  margin: 10px 0 0px 0;
+  border-radius: 3px;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+  text-align: center;
+  font-size: 0.8em;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+}
+
+.button:hover {
+  background: #8bc3a3;
+  color: white;
+}
+
+/* Send Button Styles */
+
+.form-btn {
+  width: 180px;
+  display: block;
+  float: left;
+  height: auto;
+  padding: 15px;
+  color: #fff;
+  background: rgba(80, 160, 108, 1);
+  border: none;
+  border-radius: 3px;
+  outline: none;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+  margin: 15px !important;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.form-btn:hover {
+  background: rgba(85, 184, 120, 1);
+  color: white;
+  border: none;
+}
+
+.form-btn:active {
+  opacity: 0.9;
+}
+
+
+
+@media (min-width: 991px) {
+	#portfolio .item:nth-child(5),
+	#portfolio .item:nth-child(6),
+	#portfolio .item:nth-child(7),
+	#portfolio .item:nth-child(8) {
+		margin-bottom: 0;
+  }
+
+}
+@media (max-width: 550px) {
 .container{
   margin-left: 0px;
   margin-right: 0%;
 }
   body {
-    width: 190%;
+    width: 400%;
     height: 100%;
   }
   
@@ -168,10 +441,36 @@ p.desc-text {
     padding-left: 0px;
     text-decoration: none !important;
   }
-
+  .background_content {
+    position: relative;
+    top: 0px;
+    width: 100%;
+    height: 570px;
+    background-color: white;
+    margin: 0 auto 0 auto;
+    z-index: 98;
+    text-align: center;
+  }
+  .background_content h1 {
+    width: 80%;
+    font-size: 2.5em;
+    margin: 100px;
+  }
+  #filter-list {
+    display: block;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 25px;
+    padding: 0px;
+  }
 }
 
-@media (min-width: 660px) {
+@media (min-width: 551px) {
+
+  body {
+    width: 100%;
+    height: 100%;
+  }
 
   .nav {
     margin-right: 0%;
@@ -188,6 +487,32 @@ p.desc-text {
     padding: 0px;
     background-color: rgb(63, 45, 63);
     text-decoration: none !important;
+  }
+  .background_content {
+    position: relative;
+    top: 0px;
+    width: 100%;
+    height: 570px;
+    background-color: white;
+    margin: 0 auto 0 auto;
+    z-index: 98;
+    text-align: center;
+  }
+  .background_content h1 {
+    font-size: 4.5em;
+    position: relative;
+    top: 41%;
+    width: 100%;
+    color: white;
+    padding: 0;
+    border: 0;
+    display: inline-block;
+  }
+
+  .background_content h1 span {
+    color: white;
+    padding: 0;
+    border-bottom: 10px solid #fff;
   }
 }
 
